syntax = "proto3";
import "google/protobuf/any.proto";

message Vector3Message {
	float x = 1;
	float y = 2;
	float z = 3;
}

message PlayerInputMessage {
	Vector3Message input = 1;
}

message PlayerStateMessage {
	Vector3Message position = 1;
}

message GlobalStateMessage {
	repeated google.protobuf.Any objectsState = 1;
}